# mzenas

./: .gitignore  AGENTS.md  CNAME  README.md  ai-onboarding.html  customer-flow.html  google-form-mzenas-en.gs  index.html  restaurant-kitchen.html  restaurant-operations.html
.agents/skills/render-page/: SKILL.md
.agents/skills/render-page/src/: main.rs
.agents/skills/unsplash-integration/: .skillfish.json
.pi/skills/render-page/: Cargo.toml  SKILL.md
.pi/skills/render-page/references/: webdriver-endpoints.md
.pi/skills/render-page/src/: main.rs
ai-onboarding/: index.html
assets/: README.md  floor-planner.css  floor-planner.js
customer-flow/: index.html
docs/: domain-and-hosting.md  faq.md  floor-planner.md  honest-greens-ux-research.md  initial-proposal.md  investor-dossier.md  marketing-study.md  nfc-tables.md  qr-codes.md  restaurant-contacts.md
plans/: demo-script.md  figma-mockups-plan.md  floor-planner-spec.md
restaurant-kitchen/: index.html
restaurant-operations/: index.html
waiter/: index.html
