[package]
name = "render-page"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
argh = "0.1"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
ureq = { version = "2", features = ["json"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
